--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="pull-right">
+        <% if current_user %>
         <%= link_to icon('plus', 'New Incident', class: 'fa-fw'), new_incident_path %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -49,8 +51,10 @@
                 <% end %>
               </td>
               <td><%= link_to icon('eye'), incident, class: 'text-info' %></td>
+              <% if current_user %>
               <td><%= link_to icon('pencil'), edit_incident_path(incident), class: 'text-muted' %></td>
               <td><%= link_to icon('times'), incident, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
