--- a/app/views/fires/show.html.erb
+++ b/app/views/fires/show.html.erb
@@ -72,7 +72,9 @@
       </div>
       <div class="row">
         <div class="col-md-12">
+          <% if current_user %>
           <%= link_to icon('pencil', 'Edit this report', class: 'fa-fw'), edit_fire_path(@fire), class: 'text-icon' %>
+          <% end %>
         </div>
       </div>
     </div>
