--- a/app/views/fires/_form.html.erb
+++ b/app/views/fires/_form.html.erb
@@ -38,6 +38,10 @@
        rows: '5' %>
     </div>
     <div class="form-group">
+      <%= f.label :is_extinguished, class: 'control-label' %>
+      <%= f.select :is_extinguished, options_for_select([[0,'Still Burning'], [1, 'Fire is extinguished']]), class: 'form-control' %> 
+    </div>
+    <div class="form-group">
       <%= f.submit 'Save', class: ['btn', 'btn-success'] %>
       <%= f.hidden_field :user_id %>
     </div>
