Add severity level labels on show and index page of fire

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,8 @@
 @import "core/progress-bar";
 @import "core/main";
 @import "core/navbar";
-@import "maps"
+@import "severity_levels";
+@import "incidents";
+@import "incident_types";
+@import "fires";
+@import "maps";
