--- a/app/assets/stylesheets/severity_levels.scss
+++ b/app/assets/stylesheets/severity_levels.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the severity_levels controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.label {
+  padding: .4em .6em .4em;
+}
