--- a/app/views/severity_levels/index.html.erb
+++ b/app/views/severity_levels/index.html.erb
@@ -1,29 +1,52 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Severity Levels</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Color</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @severity_levels.each do |severity_level| %>
-      <tr>
-        <td><%= severity_level.name %></td>
-        <td><%= severity_level.color %></td>
-        <td><%= link_to 'Show', severity_level %></td>
-        <td><%= link_to 'Edit', edit_severity_level_path(severity_level) %></td>
-        <td><%= link_to 'Destroy', severity_level, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Severity level', new_severity_level_path %>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="pull-right">
+        <%= link_to icon('plus', 'New Level', class: 'fa-fw'), new_severity_level_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="text-center">Listing Severity Levels</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= render 'layouts/notice', notice: notice %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <% if @severity_levels.empty? %>
+      <p class="text-muted text-center lead">No levels added yet.</p>
+      <% else %>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Levels</th>
+              <th colspan="4"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @severity_levels.each do |severity_level| %>
+            <tr>
+              <td><%= severity_label severity_level %></td>
+              <td><%= link_to icon('eye'), severity_level, class: 'text-info' %></td>
+              <td><%= link_to icon('pencil'), edit_severity_level_path(severity_level), class: 'text-muted' %></td>
+              <td><%= link_to icon('times'), severity_level, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+    <%= paginate @severity_levels %>
+    </div>
+  </div>
+</div>
