--- a/app/views/severity_levels/new.html.erb
+++ b/app/views/severity_levels/new.html.erb
@@ -1,5 +1,26 @@
-<h1>New Severity Level</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', severity_levels_path %>
+<div class="container">
+  <spaced>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="pull-left">
+          <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), severity_levels_path %>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="text-center">New Severity Level</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <%= render 'layouts/notice', notice: notice %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </spaced>
+</div>
