--- a/app/views/severity_levels/show.html.erb
+++ b/app/views/severity_levels/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="pull-left">
-        <%= link_to 'Back', severity_levels_path %>
+        <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), severity_levels_path %>
       </div>
       <div class="pull-right">
         <%= link_to icon('pencil', 'Edit this level', class: 'fa-fw'), edit_severity_level_path(@severity_level) %>
