--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,9 +36,15 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
-        <li class="nav-item"><a href="#" class="nav-link"><%= current_user.name %></a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+           aria-haspopup="true" aria-expanded="false"><%= current_user.name %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to icon('sign-out', 'Sign Out', class: 'fa-fw'), destroy_user_session_path(current_user), method: :delete %></li>
+          </ul>
+        </li>
         <% else %>
-        <li class="nav-item">
+        <li>
           <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
         </li>
         <% end %>
