--- a/app/views/severity_levels/index.html.erb
+++ b/app/views/severity_levels/index.html.erb
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="pull-right">
+        <% if current_user %>
         <%= link_to icon('plus', 'New Level', class: 'fa-fw'), new_severity_level_path %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -34,8 +36,10 @@
             <tr>
               <td><%= severity_label severity_level %></td>
               <td><%= link_to icon('eye'), severity_level, class: 'text-info' %></td>
+              <% if current_user %>
               <td><%= link_to icon('pencil'), edit_severity_level_path(severity_level), class: 'text-muted' %></td>
               <td><%= link_to icon('times'), severity_level, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
@@ -46,7 +50,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-    <%= paginate @severity_levels %>
+      <%= paginate @severity_levels %>
     </div>
   </div>
 </div>
