--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "core/progress-bar";
 @import "core/main";
 @import "core/navbar";
+@import "home";
 @import "severity_levels";
 @import "incidents";
 @import "incident_types";
