--- a/app/assets/stylesheets/core/main.scss
+++ b/app/assets/stylesheets/core/main.scss
@@ -1,4 +1,11 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:400,900';
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+
 body {
   font-family: 'Lato', sans-serif;
 }
