Add notice on index page. Fix #17

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container spaced">
   <header class="spaced image-logo text-center">
+    <div class="notice">
+      <%= render 'layouts/notice', notice: notice %>
+    </div>
     <h1 class="text-center">
       Fire Watchers
     </h1>
