--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit 'Change my password', class: ['btn', 'btn-success'] %>
+        <%= f.submit 'Change my password', class: ['btn', 'btn-info'] %>
       </div>
       <% end %>
     </div>
