--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,36 @@
 <div class="container spaced">
-  <header class="spaced image-logo text-center">
-    <div class="notice">
-      <%= render 'layouts/notice', notice: notice %>
+  <div class="row">
+    <div class="col-md-12">
+      <header class="spaced image-logo text-center">
+        <div class="notice">
+          <%= render 'layouts/notice', notice: notice %>
+        </div>
+        <h1 class="text-center">
+          Fire Watchers
+        </h1>
+        <%= image_tag 'bonfire.svg', height: 300, class: 'spaced' %>
+      </header>
     </div>
-    <h1 class="text-center">
-      Fire Watchers
-    </h1>
-    <%= image_tag 'bonfire.svg', height: 300, class: 'spaced' %>
-  </header>
-  <section class="park-name spaced ">
-    <h3 class="text-muted text-center"><%= @park_name %></h3>
-  </section>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <section class="park-name spaced ">
+        <h3 class="text-muted text-center"><%= @park_name %></h3>
+      </section>
+    </div>
+  </div>
+  <% if current_user %>
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 spaced bottom-spaced">
+        <p class="lead text-center">Report new</p>
+        <div class="text-center">
+          <%= link_to icon('exclamation', 'Incident', class: 'fa-fw'), new_incident_path, class: ['btn', 'btn-default'] %>
+          <%= link_to icon('fire', 'Fire', class: 'fa-fw'), new_fire_path, class: ['btn', 'btn-default'] %>
+        </div>
+
+      </div>
+    </div>
+  <% end %>
 </div>
 <footer class="footer spaced">
     <div class="container">
