Change image on index page and incident image on map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <h1 class="text-center">
           Fire Watchers
         </h1>
-        <%= image_tag 'bonfire.svg', height: 300, class: 'spaced' %>
+        <%= image_tag 'telescope.svg', height: 300, class: 'spaced' %>
       </header>
     </div>
   </div>
@@ -24,8 +24,8 @@
       <div class="col-md-4 col-md-offset-4 spaced bottom-spaced">
         <p class="lead text-center">Report new</p>
         <div class="text-center">
-          <%= link_to icon('exclamation', 'Incident', class: 'fa-fw'), new_incident_path, class: ['btn', 'btn-default'] %>
-          <%= link_to icon('fire', 'Fire', class: 'fa-fw'), new_fire_path, class: ['btn', 'btn-default'] %>
+          <%= link_to icon('exclamation', 'Incident', class: 'fa-fw'), new_incident_path, class: ['btn', 'btn-info'] %>
+          <%= link_to icon('fire', 'Fire', class: 'fa-fw'), new_fire_path, class: ['btn', 'btn-info'] %>
         </div>
 
       </div>
