--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -104,7 +104,7 @@ $(document).ready(function (){
       "lat": <%=@incident.location.latitude%>,
       "lng": <%=@incident.location.longitude%>,
       "picture": {
-        "url": "/assets/firemarker.png",
+        "url": "/assets/alarm.png",
         "width":  32,
         "height": 32,
       },
