--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -38,6 +38,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
            aria-haspopup="true" aria-expanded="false"><%= current_user.name %><span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><%= link_to icon('pencil', 'Edit Account', class: 'fa-fw'), edit_user_registration_path(current_user) %></li>
+            <li class="divider"></li>
             <li><%= link_to icon('sign-out', 'Sign Out', class: 'fa-fw'), destroy_user_session_path(current_user), method: :delete %></li>
           </ul>
         </li>
