Fix devise error messages div appearing when empty

--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -9,12 +9,14 @@
       <div class="col-md-12">
         <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
 
+        <% if not devise_error_messages!.empty? %>
         <div class="alert alert-danger alert-dismissible fade in" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
           <%= devise_error_messages! %>
         </div>
+        <% end %>
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
