--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -9,8 +9,16 @@
       <div class="row">
         <div class="col-md-12">
           <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-          <%= devise_error_messages! %>
 
+          <% if not devise_error_messages!.empty? %>
+          <div class="alert alert-danger alert-dismissible fade in" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <%= devise_error_messages! %>
+          </div>
+          <% end %>
+          
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
