--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -8,12 +8,14 @@
     <div class="col-md-6 col-md-offset-3">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
 
+      <% if not devise_error_messages!.empty? %>
       <div class="alert alert-danger alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <%= devise_error_messages! %>
       </div>
+      <% end %>
 
       <%= f.hidden_field :reset_password_token %>
       <div class="row">
