--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -7,7 +7,15 @@
   <div class="row">
     <div class="col-sm-12 col-md-6 col-md-offset-3 spaced">
       <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+
+      <% if not devise_error_messages!.empty? %>
+      <div class="alert alert-danger alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <%= devise_error_messages! %>
+      </div>
+      <% end %>
 
         <div class="form-group">
           <%= f.label :email %>
