--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -9,12 +9,14 @@
       <div class="col-md-12">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
+        <% if not devise_error_messages!.empty? %>
         <div class="alert alert-danger alert-dismissible fade in" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
           <%= devise_error_messages! %>
         </div>
+        <% end %>
 
         <div class="row">
           <div class="col-md-12">
@@ -85,7 +87,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-          <%= f.submit "Update", class: ['btn', 'btn-info'] %>  
+          <%= f.submit "Update", class: ['btn', 'btn-info'] %>
           </div>
         </div>
         <% end %>
@@ -93,14 +95,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
