--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,12 +10,14 @@
       <div class="col-md-12">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
+        <% if not devise_error_messages!.empty? %>
         <div class="alert alert-danger alert-dismissible fade in" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
           <%= devise_error_messages! %>
         </div>
+        <% end %>
 
         <div class="row">
           <div class="col-md-12">
@@ -70,7 +72,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <%= render "users/shared/links" %>  
+        <%= render "users/shared/links" %>
       </div>
     </div>
   </div>
