--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,21 +1,34 @@
-<%= form_for(@role) do |f| %>
-  <% if @role.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@role.errors.count, "error") %> prohibited this role from being saved:</h2>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div class="row">
+        <div class="col-md-12">
+          <%= form_for(@role) do |f| %>
+          <% if @role.errors.any? %>
+          <div id="error_explanation">
+            <p class="text-danger text-center"><%= pluralize(@role.errors.count, "error") %> prohibited this role from being saved</p>
+          </div>
+          <% end %>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group <%= @role.errors[:name].empty? ? '' : 'has-error' %>">
+                <%= f.label :name, class: 'control-label' %>
+                <%= f.text_field :name, class: 'form-control' %>
+                <% if not @role.errors[:name].empty? %>
+                  <% @role.errors[:name].each do |message| %>
+                  <span class="help-block"><%= message.capitalize %></span>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
+          </div>
 
-      <ul>
-      <% @role.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <div class="actions">
+            <%= f.submit 'Save', class: ['btn', 'btn-success'] %>
+          </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
