--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -45,6 +45,17 @@
           </div>
         </div>
 
+        <% if current_user_is 'master' %>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <label for="user[role_id]" class="control-label"i >User Role:</label>
+              <%= f.collection_select :role_id, Role.all, :id, :name, {}, {class: "form-control"}  %>
+            </div>
+          </div>
+        </div>
+        <% end %>
+
         <div class="row">
           <div class="col-md-12">
             <hr>
