--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,6 +34,15 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
+        <% if current_user_is 'master' %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+           aria-haspopup="true" aria-expanded="false"><i class="fa fa-cog"></i> Manage <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to icon('users','Roles', class: 'fa-fw'), roles_path %></li>
+          </ul>
+        </li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
            aria-haspopup="true" aria-expanded="false"><%= current_user.name %><span class="caret"></span></a>
