--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,27 +1,49 @@
-<p id="notice"><%= notice %></p>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="pull-right">
+        <%= link_to icon('plus','New Role', class: 'fa-fw'), new_role_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center">Listing Roles</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <% if @roles.empty? %>
+      <p class="text-center lead">No roles created yet.</p>
+      <% else %>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<h1>Listing Roles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @roles.each do |role| %>
-      <tr>
-        <td><%= role.name %></td>
-        <td><%= link_to 'Show', role %></td>
-        <td><%= link_to 'Edit', edit_role_path(role) %></td>
-        <td><%= link_to 'Destroy', role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Role', new_role_path %>
+          <tbody>
+            <% @roles.each do |role| %>
+            <tr>
+              <td><%= role.name %></td>
+              <td><%= link_to icon('eye'), role, class: 'text-info' %></td>
+              <td><%= link_to icon('pencil'), edit_role_path(role), class: 'text-muted' %></td>
+              <td><%= link_to icon('times'), role, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12"></div>
+  </div>
+</div>
