Add show and index page

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -12,7 +12,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-12"></div>
+    <div class="col-md-12">
+      <%= render 'layouts/notice', notice: notice %>
+    </div>
   </div>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
