Change font to Source Sans Pro

--- a/app/assets/stylesheets/core/main.scss
+++ b/app/assets/stylesheets/core/main.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Lato:400,900';
+@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro';
 
 html {
   position: relative;
@@ -7,7 +7,7 @@ html {
 
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .spaced {
