Add documentation link on footer at home view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,6 +41,11 @@
       </span>
        by <a href="https://github.com/jaoevangelista">@joaoevangelista</a>
      </p>
+     <p class="text-muted">
+       <a href="http://joaoevangelista.gitlab.io/fireplace/">
+        <span class="text-danger"><i class="fa fa-book fa-fw"></i></span> Documentation
+       </a>
+     </p>
     </div>
     <div class="pull-right">
       <p class="text-muted">Licensed under <span>
